# chat

./: TCPServer.cpp  client.cpp  readme.md  server.cpp
QT-ChatAdminServerGUI/: CMakeLists.txt  adminclient.cpp  adminclient.h  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h
QT-ChatClientGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
